refactor(infra-modules): media server backup improvements
- Implements a systemd target for all containers in the media server stack
- Replaces our home grown Restic shell script with Autorestic
- Migrates backups from Google Drive to Backblaze B2

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/149

--- a/infra/modules/ignition/backups/files/packages.service
+++ b/infra/modules/ignition/backups/files/packages.service
@@ -15,7 +15,7 @@ RemainAfterExit=yes
 # added to the root image in a future Fedora CoreOS release as it will
 # prevent the service from failing.
 ExecStart=/usr/bin/rpm-ostree install -y --apply-live --allow-inactive \
-    rclone \
+    autorestic \
     restic
 ExecStart=/bin/touch /var/lib/%N.stamp
 
