--- a/infra/modules/ignition/mediasrv/files/hass.service
+++ b/infra/modules/ignition/mediasrv/files/hass.service
@@ -3,6 +3,7 @@ Description=Home Assistant Container
 Documentation=man:podman-generate-systemd(1)
 Wants=podman-networks.service
 After=podman-networks.service
+PartOf=containers.target
 RequiresMountsFor=%t/containers
 
 [Service]
@@ -31,4 +32,4 @@ Type=notify
 NotifyAccess=all
 
 [Install]
-WantedBy=default.target
+WantedBy=containers.target
