--- a/infra/modules/ignition/mediasrv/templates/swag.service
+++ b/infra/modules/ignition/mediasrv/templates/swag.service
@@ -3,6 +3,7 @@ Description=SWAG (NGINX) Container
 Documentation=man:podman-generate-systemd(1)
 Wants=podman-networks.service
 After=podman-networks.service
+PartOf=containers.target
 RequiresMountsFor=%t/containers
 
 [Service]
@@ -37,4 +38,4 @@ Type=notify
 NotifyAccess=all
 
 [Install]
-WantedBy=default.target
+WantedBy=containers.target
