ci(*): a couple of small fixes for CI infra jobs
- Removes the vars file arg from TF commands, now that the file is no longer used.
- Fixes the `changes` paths for the infra module.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/151

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ infra:prod:
       changes:
         - infra/deployments/${DEPLOYMENT}/**/*
         - infra/modules/**/*
-        - .gitlab/ci/terraform.yml
+        - .gitlab/ci/infra.yml
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == "web"
   parallel:
     matrix: *deployments
@@ -70,6 +70,6 @@ infra:dev:
       changes:
         - infra/deployments/${DEPLOYMENT}/**/*
         - infra/modules/**/*
-        - .gitlab/ci/terraform.yml
+        - .gitlab/ci/infra.yml
   parallel:
     matrix: *deployments
