fix(metal): resolve rootless GitLab runner deployment
At some point GitLab changed the way rootless Runners work, causing a deployment regression in this project. This MR fixes the issue (albeit somewhat crudely).

Closes #35

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/158

--- a/metal/roles/gitlab-runner/handlers/main.yml
+++ b/metal/roles/gitlab-runner/handlers/main.yml
@@ -8,6 +8,9 @@
     user: 9999:{{ docker_group.gid }}
     network_mode: host
     volumes:
+      # I'm aware of how stupid this is. Blame GitLab for being unable to
+      #  stick to a single directory for runner config.
       - /etc/gitlab-runner:/.gitlab-runner
+      - /etc/gitlab-runner:/home/gitlab-runner
       - /var/run/docker.sock:/var/run/docker.sock
   listen: recreate_container
