fix(templates): run sysprep to generalize Windows images
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/159

--- a/templates/playbooks/windows-server.yml
+++ b/templates/playbooks/windows-server.yml
@@ -99,3 +99,8 @@
         Get-Content -Path log.txt
         Remove-Item -Path cloudbaseinit.msi
         Remove-Item -Path log.txt
+
+    - name: Run Sysprep to generalize the image
+      win_shell: |
+        $unattendFile = Join-Path $env:ProgramFiles "Cloudbase Solutions\Cloudbase-Init\conf\Unattend.xml"
+        & $env:SystemRoot\System32\Sysprep\Sysprep.exe /oobe /generalize /mode:vm /quit /quiet /unattend:$unattendFile
