chore(mediasrv): pin Jellyfin version to 10.10 for now
Jellyfin is about to undergo a major update, so we're going to defer this for now and handle it manually.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/167

--- a/infra/modules/ignition/mediasrv/files/jellyfin.service
+++ b/infra/modules/ignition/mediasrv/files/jellyfin.service
@@ -21,7 +21,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     -v /srv/jellyfin:/config:Z \
     -v /var/mnt/library:/media/library:z \
     --network proxy \
-    docker.io/jellyfin/jellyfin:latest
+    ghcr.io/jellyfin/jellyfin:10.10
 
 ExecStop=/usr/bin/podman stop --ignore -t 10 --cidfile=%t/%n.ctr-id
 ExecStopPost=/usr/bin/podman rm -f --ignore -t 10 --cidfile=%t/%n.ctr-id
