--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,11 @@
 # Do not allow duplicate pipelines.
 workflow:
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-    - if: $CI_COMMIT_TAG
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH           # Run on main branch commits
+    - if: $CI_COMMIT_TAG                                    # Run on tags
+    - if: $CI_PIPELINE_SOURCE == "schedule"                 # Run when scheduled
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"      # Run for merge requests
+    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS      # No duplicate pipelines for merge requests
       when: never
 
 default:
