--- a/.gitlab/ci/metal.yml
+++ b/.gitlab/ci/metal.yml
@@ -1,6 +1,6 @@
 ---
 ansible-lint:
-  stage: lint
+  stage: validate
   image: registry.gitlab.com/pipeline-components/ansible-lint:latest
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
