--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,8 @@ infra:prod:
         - infra/modules/**/*
         - .gitlab/ci/infra.yml
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == "web"
+    - if: $CI_PIPELINE_SOURCE == 'schedule'
+      when: never
   parallel:
     matrix: *deployments
 
