--- a/cluster/apps/media-server/sabnzbd/statefulset.yaml
+++ b/cluster/apps/media-server/sabnzbd/statefulset.yaml
@@ -55,7 +55,7 @@ spec:
               memory: 250Mi
       containers:
         - name: sabnzbd
-          image: "ghcr.io/onedr0p/sabnzbd:4.2.3"
+          image: ghcr.io/home-operations/sabnzbd:4.5.3
           imagePullPolicy: IfNotPresent
           env:
             - name: SABNZBD__API_KEY
