refactor(infra/fcos): improve module flexibility
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/201

--- a/infra/modules/ignition/backups/templates/autorestic.yml
+++ b/infra/modules/ignition/backups/templates/autorestic.yml
@@ -2,9 +2,9 @@
 version: 2
 
 locations:
-  container_data:
+  container_volumes:
     from:
-      - /var/srv
+      - /var/lib/containers/storage/volumes
     to:
       - backblaze
     forget: prune
